	Merged Red's guild fisher for coleslaw. 
	Merged Searos' EssenceMiner
	Merged Searos' AIOSmelter new support for Al-Kharid
	Merged Searos' VarrockSmither
	Merged Searos' FletchnBankBows update
	Fixed shopItemID bug in Controller shop methods 
	Merged Red's IntelliJ/gradle support
	Merged Searos' Woodcutter update -- improved pathfinding, ability to stop added. 
	Merged Searos' SpinStrings
	
	
FEB 4 2021
	Rearranged foodIds so that cake slices get aten before whole cakes.
	getBankItemCount() works again.
	AIOThiever now supports banking in Ardougne Square.
	AIOThiever now supports command line arguments.
	AIOThiever will now properly keep trying to logout.
	AKMiner will now properly bank silver.
	Added Searos' new script: FletchnBankBows
	Added Searos' updated PowercraftTalisman
	Added ceikry's ceikplates (SBot)
	Added Gah's GuildMine_v7 (SBot) 
	AIOCooker will now properly bank anchovies.
	
	
FEB 2 2021
	You can now run scripts from the command line! If it cannot find the script, it will immediately terminate and return 1.
	Added dropItem(id, amt) to Controller
	Added Searos' Woodcutting and PowercraftTalisman scripts. Very cool stuff!!!
	Added Gah's fixed SBot scripts: YanilleIron and drayfish

FEB 1 2021
	Fixed GuildFish2 not handling sharks correctly.
	Removed GuildFish to reduce confusion with GuildFish2. It also is a bad script compared to GuildFish2.
	Batching support added to GuildFish2. 
	AIOCooker properly exported, users should see it now in their listing.
	AIOSmelter will now properly work on worlds where there is no right click bank option.
	AIOSmelter will now not take forever to deposit items.
	AIOSmelter now supports batching.
	Added note about PowerTuna being used in Karamja, not Catherby.
	AKMiner, AIOCooker and AIOSmelter will now keep trying to talk to a banker.
	AIOFighter acts a little less dumb. It's still dumb though.
	AIOFighter will no longer crash if no monsters are around while you are maging.