@@ -11,6 +11,7 @@ FEB 6 2021
 	Merged Red's IntelliJ/gradle support
 	Merged Searos' Woodcutter update -- improved pathfinding, ability to stop added. 
 	Merged Searos' SpinStrings
+	HerbHarvester crashing fixed.
 	
 	
 FEB 4 2021
